--- a/src/css/match.css
+++ b/src/css/match.css
@@ -17,18 +17,22 @@
   width: 300px;
   height: 300px;
   float:left;
-  margin:0;
+  margin-top:100px;
+  margin-left: 200px;
+  border:1px solid gray;
+  border-radius: 50%;
+}
+.profile_img img{
+  width: 200px;
+  height: 200px;
+  margin-top:40px;
+  margin-left:40px;
 }
 .profile_text {
-  width: 50%;
+  width: 35%;
   height: 500px;
   border:1px solid gray;
-  float:left;
-  margin:0;
-
-}
-.profile {
-  border: 1px solid;
-
-  overflow: hidden;
+  float:right;
+  margin-top:100px;
+  margin-right: 250px;
 }
