--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 body, html {
+  margin: 0;
   width: 100%;
   height: auto;
   font-family: Lato,Hiragino Kaku Gothic ProN,'ヒラギノ角ゴ ProN W3',Meiryo,"メイリオ",Hiragino Kaku Gothic ProN,'ヒラギノ角ゴ ProN W3',sans-serif;
@@ -6,6 +7,7 @@ body, html {
   line-height: 1.8;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 #wrapper {
@@ -37,7 +39,7 @@ padding-top: 30px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  min-height: 69px;
+  min-height: 90px;
   background-color: #d3032b;
   /* max-width: 1360px; */
 }
@@ -266,4 +268,8 @@ p {
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-facebook:before {
+    content: '\e801';
 }
