--- a/src/css/match.css
+++ b/src/css/match.css
@@ -1,5 +1,7 @@
 .container{
+  width:100%;
   height: 800px;
+  background-color: #eee;
 }
 
 .matching {
@@ -14,41 +16,41 @@
   margin: 0px;
 }
 .matching p {
-  font-size: 20px;
+  color:#5d6f77;
+  font-size: 18px;
   margin: 0px;
   text-align: center;
 }
+.profile {
+  width:80%;
+  height:500px;
+  margin:0 auto;
+  padding-top:80px;
 
-.profile_img {
-  width: 300px;
-  height: 300px;
-  float:left;
-  margin-top:100px;
-  margin-left: 200px;
-  border:1px solid #a1dae6;
-  border-radius: 50%;
+
 }
 .profile_img img{
-  width: 200px;
-  height: 200px;
-  margin-top:40px;
-  margin-left:50px;
+  width:300px;
+  float:left;
+  padding-left:100px;
 }
 .profile_text {
-  width: 35%;
-  height: 300px;
+  width:300px;
   float:right;
-  margin-top:100px;
-  margin-right: 120px;
-  padding:20px;
-  color: #FFF;
-  background: #a1dae6;
-  border-bottom: solid 6px #a1dae6;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
-  border-radius: 9px;
+  padding-right:330px;
 }
-.profile_text p {
-  font-size: 30px;
-    margin: 0;
-    padding: 0;
+.profile_text ul {
+  color:#5d6f77;
+  width:450px;
+  list-style: none;
+  font-size:20px;
+  margin-top:50px;
+}
+.profile_text li {
+  padding-top:25px;
+  border-bottom:3px solid #fff;
+}
+.profile_text span {
+  display: inline-block;
+  width:80px;
 }
